@@ -4,6 +4,12 @@ xserver-xorg-input-evdev (1:2.6.0-2) UNRELEASED; urgency=low
     Linux-only.
   * Replace non-breaking spaces with regular spaces in udeb's long
     description.
+  * Switch to dh:
+    - Bump debhelper build-dep, add dh-autoreconf build-dep.
+    - Bump compat to 8.
+    - Rewrite debian/rules.
+    - Pass --fail-missing to dh_install.
+    - Stop passing --disable-static to configure, that's the default.
 
  -- Cyril Brulebois <kibi@debian.org>  Wed, 02 Feb 2011 05:44:06 +0100
 
